# proxima

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SHAPE.md  THIRD_PARTY.md  TODO.md  clippy.toml
examples/new-platform/: Cargo.toml  build.rs
prime/: Cargo.toml  build.rs  prime-runtime.toml
prime/benches/: bench_inbox_const.rs  bench_inbox_dynamic.rs  bench_local_primitives.rs  bench_reactor_wakeup.rs  bench_thread_identity.rs  bench_timer_driver.rs
prime/examples/: inbox_hotloop.rs  inbox_spike.rs
prime/src/: config.rs  core.rs  lib.rs  os.rs  timer_driver.rs  trace.rs
prime/tests/: prime_wheel_linkage.rs
proxima-amqp/: Cargo.toml
proxima-amqp/src/: any_protocol.rs  broker.rs  config.rs  connection.rs  error.rs  frame.rs  fsm.rs  lib.rs  method.rs  pipe.rs  pipes.rs  topic.rs  wait_sources.rs  wire.rs
proxima-auth/: Cargo.toml
proxima-auth/src/: digest.rs  lib.rs  sigv4.rs  spnego.rs  token.rs
proxima-build/: Cargo.toml
proxima-build/src/: lib.rs  profile.rs
proxima-codec/: Cargo.toml
proxima-codec/src/: factory.rs  lib.rs  share_buf.rs
proxima-config/: Cargo.toml
proxima-config/src/: lib.rs
proxima-core/: Cargo.toml  build.rs  proxima-core.toml
proxima-core/benches/: bench_io_async.rs  bench_ring.rs  bench_ring_decompose.rs  bench_signal_alloc.rs
proxima-core/docs/: primitives-migration.md
proxima-core/src/: arch.rs  arena.rs  batch.rs  buffer.rs  datagram_batch.rs  factory.rs  histogram.rs  io.rs  lib.rs  live.rs  markers.rs  park.rs  per_core.rs  signal.rs
proxima-core/tests/: loom_signal.rs
proxima-dns/: Cargo.toml
proxima-dns/src/: any_protocol.rs  config.rs  datagram_protocol.rs  error.rs  framed_app.rs  lib.rs  pipes.rs  wire.rs
proxima-http/: Cargo.toml  build.rs  proxima-listeners-http.toml
proxima-http/benches/: bench_h1_client_compare.rs
proxima-http/examples/: native_h3_demo.rs
proxima-http/src/: any_listener.rs  error_render.rs  lib.rs  templates.rs
proxima-http/tests/: native_listener_concurrent_dispatch.rs  native_listener_stale_now_reap.rs  native_round_trip.rs
proxima-intercept/: Cargo.toml
proxima-intercept/benches/: RESULTS_bench_intercept_capture_m1.md  bench_intercept_capture.rs
proxima-intercept/examples/: decode-h2-dump.rs  decode-ws-deflate-dump.rs  inspect-capture.rs  quic-capture.rs  replay-capture.rs  transparent-capture.rs  vscode-proxy-capture.rs
proxima-intercept/scripts/: proxima-capture.sh  quic-pf-redirect.sh
proxima-intercept/src/: ca.rs  capture.rs  compress.rs  config.rs  interceptor.rs  lib.rs  pipe.rs  quic_relay.rs  session.rs  shutdown.rs  swap.rs  tee.rs
proxima-intercept/tests/: integration.rs
proxima-kafka/: Cargo.toml
proxima-kafka/src/: any_protocol.rs  broker.rs  config.rs  connection.rs  error.rs  frame_codec.rs  framed_app.rs  lib.rs  pipe.rs  pipes.rs  wire.rs
proxima-kafka/tests/: any_protocol_end_to_end.rs
proxima-listen/: Cargo.toml  build.rs  proxima-listen-core.toml  proxima-listen.toml  proxima-listeners-stream.toml
proxima-listen/src/: config.rs  handle.rs  lib.rs  offload.rs  preface.rs  registry.rs  serve_multiplexed.rs  serve_pipe.rs
proxima-macros/: Cargo.toml
proxima-macros/benches/: bench_error_derive.rs
proxima-macros/src/: describe.rs  error_derive.rs  fan_bang.rs  filter_bang.rs  fixture_attr.rs  lib.rs  main_attr.rs  pipe_attr.rs  pipe_bang.rs  runtime_args.rs  span_attr.rs  span_carrier.rs  test_attr.rs
proxima-macros/tests/: error_derive.rs  expand_pipe.rs  expand_pipe_bang.rs  expand_span.rs  ui_tests.rs
proxima-memcached/: Cargo.toml
proxima-memcached/src/: any_protocol.rs  config.rs  connection.rs  error.rs  framed_app.rs  lib.rs  pipe.rs  pipes.rs
proxima-memcached/tests/: any_protocol_end_to_end.rs
proxima-mqtt/: Cargo.toml
proxima-mqtt/src/: any_protocol.rs  broker.rs  config.rs  connection.rs  error.rs  lib.rs  pipe.rs  pipes.rs  topic_filter.rs  wait_sources.rs
proxima-mqtt/tests/: pubsub_round_trip.rs
proxima-net/: Cargo.toml  README.md  build.rs  proxima-net-xdp.toml
proxima-net/benches/: bench_connect.rs
proxima-net/examples/: smoke.rs  xdp_echo.rs  xdp_mode_probe.rs  xdp_reactor_burst.rs  xdp_ring_walkthrough.rs  xdp_tcp.rs  xdp_tcp_reactor.rs  xdp_zerocopy_probe.rs
proxima-net/src/: lib.rs  packet.rs  stack.rs  tcp_listener.rs  tcp_stack.rs
proxima-patterns/: Cargo.toml  build.rs  proxima-notify.toml
proxima-patterns/examples/: alert_walkthrough.rs
proxima-patterns/src/: control_plane.rs  lib.rs
proxima-patterns/tests/: event_roundtrip.rs  heartbeat_to_stdout_demo.rs
proxima-pgwire/: Cargo.toml
proxima-pgwire/benches/: bench_scram_kdf.rs
proxima-pgwire/examples/: capture_realpg.rs
proxima-pgwire/src/: any_protocol.rs  auth.rs  broker.rs  config.rs  connection.rs  error.rs  handler.rs  lib.rs  listen.rs  md5.rs  pipe.rs  pipe_contract.rs  pipes.rs  scram.rs  store.rs
proxima-pgwire/tests/: differential_realpg.rs  integration.rs
proxima-primitives/: Cargo.toml  build.rs  proxima-primitives.toml
proxima-primitives/benches/: pipe_bench_bucket_table.rs  pipe_bench_http_construction.rs  pipe_bounded_batch_parity.rs  pipe_fanin_merge.rs  pipe_fanout_parity.rs  pipe_sink_perop.rs  pipe_sink_zerocopy.rs  stream_bench_datagram_batch.rs  sync_bench_runtime_shaped.rs
proxima-primitives/src/: driver.rs  lib.rs
proxima-primitives/tests/: pipe_macro_boxed.rs  pipe_part_tier3_no_std.rs  stream_datagram_batch_zero_alloc.rs
proxima-process/: Cargo.toml  build.rs
proxima-process/benches/: bench_libc_shim.rs
proxima-process/src/: capabilities.rs  command.rs  command_config.rs  command_pipe.rs  descriptor.rs  dispatched.rs  env.rs  ipc.rs  (+18 more)
proxima-protocols/: Cargo.toml  build.rs  http1_codec.toml  http3_codec.toml  quic.toml
proxima-quic/: Cargo.toml
proxima-recording/: Cargo.toml
proxima-redis/: Cargo.toml
proxima-runtime/: Cargo.toml
proxima-storage/: Cargo.toml
proxima-telemetry/: Cargo.toml  build.rs  proxima-log-buffer.toml  proxima-telemetry.toml
proxima-test/: Cargo.toml
proxima-tls/: Cargo.toml
(+1395 files in other folders)
